create separate models for update and create database entity
